name:                flannel
version:             0.0.0.0
synopsis:            A DSL for handling command line options.
homepage:            github.com/nahiluhmot/flannel
license:             MIT
license-file:        LICENSE
author:              Tom Hulihan
maintainer:          hulihan.tom159@gmail.com
category:            System
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base >=4.6 && <4.7, containers ==0.5.*, mtl ==2.1.*
  hs-source-dirs:      src
  exposed-modules:     System.Flannel
  default-language:    Haskell2010

test-suite spec
  main-is:             Spec.hs
  type:                exitcode-stdio-1.0
  build-depends:       base >=4.6 && <4.7, hspec ==1.8.*, containers ==0.5.*,
                       mtl ==2.1.*
  hs-source-dirs:      src, spec
  ghc-options:         -Wall
  default-language:    Haskell2010
